# FractureMLDiagnosticsApp

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
data/: README.dataset.txt  README.roboflow.txt  data.yaml
data/test/labels/: 31.rf.2953e549813f459518f6e06203c8eaa3.txt
data/train/labels/: 101.rf.3f14e38b35adf994668b5a62462e4e15.txt  101.rf.53f0bebefe47bfeb76239dca12bfb1fd.txt  101.rf.b6361aa813154d6f5e1f8ca8e66babe0.txt  101_jpg.rf.2a78fc4d28495ff1e00618778a209f7f.txt  101_jpg.rf.5acc1e37b0a83310eb1a402e358b20bd.txt  101_jpg.rf.bb2eabdceb8c96d9e28f67157b96d535.txt  102_jpg.rf.6b236d33fc4e6cf060278a8896f08d18.txt  102_jpg.rf.a9149f417a5e44ff07dfa54b1f1bded6.txt  102_jpg.rf.bfcb7b5b65239bdfc64835fc5a043f5d.txt  103_jpg.rf.0212d96181f8b1651ea1f408be0cbcaa.txt  103_jpg.rf.b5c8e8eafe87c3deba4d6fa1fe7e9ddc.txt  103_jpg.rf.d2ccaa0c59d6e34d9cc5bd64ed8c78ef.txt  104.rf.2aac40408711f788091431a85c2fc067.txt  104.rf.72614d5207f0499be36d7e08fdefa99e.txt  104.rf.f5dab6ae539629880db959bc12fdd4d5.txt  105_jpg.rf.649bbd33684a101aa9daca6f9e4c7fd6.txt  105_jpg.rf.b6b7713f2a9c9475c6191af08b44b9ba.txt  105_jpg.rf.f13fefbad48dfe433a33296e618e74b2.txt  106_jpg.rf.80c96668ec8b2349583dd45b8f9ba867.txt  106_jpg.rf.a47a5829e8dcf032844e05751b204135.txt  106_jpg.rf.d94cd6521249aee2ea31b071c51b1159.txt  108.rf.054b1aa8185fbae7370023c393a1a89a.txt  108.rf.0ff21c36646ac35c76e034107c971cbb.txt  108.rf.461a8bf5c734948a1f30a9c5461f3f06.txt  (+861 more)
models-train/: 02_yolov7_detection.py  mura-finger-classification.ipynb
runs/train/exp/: opt.yaml  (+1 more)
src/: main.cpp
src/gui/: README.md
(+3 files in other folders)
